[package]
name = "vex-team-tracker-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
fake = { version = "3.0.1", features = ["derive"], optional = true }
rand = { version = "0.8.5", optional = true }

[features]
fake = ["dep:fake", "dep:rand"]
